# trading-agents

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  agents.py  backtest.py  config.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  run_backtest.py  state.py  test_api.py
.github/workflows/: ci.yml
tests/: test_agents.py  test_state.py
